Add a test on GLCanvasJFX but prevent run from maven cli which hangs at test start